# bcminer

./: README.md
CSBCMiner/: .gitignore  BlockHeader.cs  (+6 more)
jbcminer/: CMakeLists.txt  cuda-stats.csv  pom.xml
jbcminer/src/main/java/: Sample.java
jbcminer/src/main/java/com/infine/demo/bcminer/: Bench.java  BlockHeader.java  HashPredicate.java  IMiner.java  MinerOptions.java  MinerStats.java  Utils.java
jbcminer/src/main/java/com/infine/demo/bcminer/api/: BlockChainInfoClient.java  BlockChainResponse.java  UnsignedIntDeserializer.java
jbcminer/src/main/java/com/infine/demo/bcminer/cl/: CLMiner.java
jbcminer/src/main/java/com/infine/demo/bcminer/cpp/: CppMiner.java
jbcminer/src/main/java/com/infine/demo/bcminer/cuda/: CudaMiner.java
jbcminer/src/main/java/com/infine/demo/bcminer/java/: JavaMiner.java  Sha256.java
jbcminer/src/main/java/com/infine/demo/jbcminer/: Bench.java  BlockHeader.java  Utils.java
jbcminer/src/main/java/com/infine/demo/jbcminer/java/: JavaBitcoinMiner.java  Sha256.java
jbcminer/src/main/native/: cppminer.cpp
jbcminer/src/main/resources/: block_239711.json
jbcminer/src/main/resources/cl/: clerrors.properties  miner.cl
jbcminer/src/main/resources/cuda/: miner.cu
jbcminer/src/test/java/com/infine/demo/bcminer/: BenchTest.java  BlockHeaderTest.java  HashPredicateTest.java  TestHeader.java
jbcminer/src/test/java/com/infine/demo/bcminer/api/: BlockChainInfoClientTest.java  BlockChainResponseTest.java
jbcminer/src/test/java/com/infine/demo/jbcminer/: BenchTest.java  BlockHeaderTest.java  JavaBitcoinMinerTest.java  TestHeader.java
(+85 files in other folders)
